@@ -2,6 +2,7 @@
 Version: 0.1.23
 Date: ????
   Changes:
+    - Added support for prototype categories in bonuses such as __item__ and __entity__
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.22
 Date: 2023-12-11
